5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4427/executions/1764_2390.log
== TEST (2019-05-30 11:55:38) 
-- CODE:
# ADRIANA BINDA LIMA
# FREQUENCIA DE ALUNOS - MAXI

from numpy import*
u=array(eval(input("")))
u2=array(eval(input("")))

if(max(u)==u[0]):
m=1
elif(max(u)==u[1]):
m=2
elif(max(u)==u[2]):
m=3
elif(max(u)==u[3]):
m=4
elif(max(u)==u[4]):
m=5
elif(max(u)==u[5]):
m=6
elif(max(u)==u[6]):
m=7
elif(max(u)==u[7]):
m=8
elif(max(u)==u[8]):
m=9
elif(max(u)==u[9]):
m=10
elif(max(u)==u[10]):
m=11
elif(max(u)==u[11]):
m=12
print(m)
-- ERROR:
File "XXXX", line 9
    m=1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:10:23) 
-- CODE:
# ADRIANA BINDA LIMA
# FREQUENCIA DE ALUNOS - MAXI

from numpy import*
u=array(eval(input("")))
u2=array(eval(input("")))

if(max(u)==u[0]):
m=1
elif(max(u)==u[1]):
m=2
elif(max(u)==u[2]):
m=3
elif(max(u)==u[3]):
m=4
elif(max(u)==u[4]):
m=5
elif(max(u)==u[5]):
m=6
elif(max(u)==u[6]):
m=7
elif(max(u)==u[7]):
m=8
elif(max(u)==u[8]):
m=9
elif(max(u)==u[9]):
m=10
elif(max(u)==u[10]):
m=11
elif(max(u)==u[11]):
m=12
print(m)
-- ERROR:
File "XXXX", line 9
    m=1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:11:06) 
-- CODE:
# ADRIANA BINDA LIMA
# FREQUENCIA DE ALUNOS - MAXI

from numpy import*
u=array(eval(input("")))
u2=array(eval(input("")))

if(max(u)==u[0]):
	m=1
elif(max(u)==u[1]):
	m=2
elif(max(u)==u[2]):
	m=3
elif(max(u)==u[3]):
	m=4
elif(max(u)==u[4]):
	m=5
elif(max(u)==u[5]):
	m	=6
elif(max(u)==u[6]):
	m=7
elif(max(u)==u[7]):
	m=8
elif(max(u)==u[8]):
	m=9
elif(max(u)==u[9]):	
	m=10
elif(max(u)==u[10]):
	m=11
elif(max(u)==u[11]):
	m=12
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:11:24) 
-- CODE:
# ADRIANA BINDA LIMA
# FREQUENCIA DE ALUNOS - MAXI

from numpy import*
u=array(eval(input("")))
u2=array(eval(input("")))

if(max(u)==u[0]):
	m=1
elif(max(u)==u[1]):
	m=2
elif(max(u)==u[2]):
	m=3
elif(max(u)==u[3]):
	m=4
elif(max(u)==u[4]):
	m=5
elif(max(u)==u[5]):
	m	=6
elif(max(u)==u[6]):
	m=7
elif(max(u)==u[7]):
	m=8
elif(max(u)==u[8]):
	m=9
elif(max(u)==u[9]):	
	m=10
elif(max(u)==u[10]):
	m=11
elif(max(u)==u[11]):
	m=12
print(m)
-- EXECUTION TIME:
0.496618
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
